<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ucol.a1599116.tuckbox.activity.DeliveryActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginStart="32dp"
            android:orientation="vertical"
            android:paddingBottom="32dp"
            android:paddingTop="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvWeAccept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credit_card_accept" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_visa" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_mastercard" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilCreditCard"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".75">

                    <EditText
                        android:id="@+id/etCreditCard"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/hint_credit_card"
                        android:inputType="text"
                        android:maxLength="19" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilCreditCardCVV"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".25">

                    <EditText
                        android:id="@+id/etCreditCardCVV"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/colorWhite"
                        android:hint="@string/hint_credit_card_cvv"
                        android:inputType="numberDecimal"
                        android:maxLength="3" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <com.satsuware.usefulviews.LabelledSpinner
                    android:id="@+id/spnCreditCardExpiryMonth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    app:labelText="@string/hint_credit_card_expiry_month" />

                <com.satsuware.usefulviews.LabelledSpinner
                    android:id="@+id/spnCreditCardExpiryYear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".5"
                    app:labelText="@string/hint_credit_card_expiry_year" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvDeliveryDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/delivery_details" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilAddressStreet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/etAddressStreet"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/colorWhite"
                    android:hint="@string/hint_address_street"
                    android:inputType="text"
                    android:focusable="false"
                    android:onClick="onClickAddressStreet"/>
            </android.support.design.widget.TextInputLayout>

            <com.satsuware.usefulviews.LabelledSpinner
                android:id="@+id/spnAddressRegion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:labelText="@string/hint_address_region" />

            <com.satsuware.usefulviews.LabelledSpinner
                android:id="@+id/spnDeliveryTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:labelText="@string/hint_delivery_time" />

            <Button
                android:id="@+id/btnReviewOrder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="onClickReviewOrder"
                android:text="@string/review_orders"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
