<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ucol.a1599116.tuckbox.activity.ForgottenPasswordActivity">

    <ScrollView
        android:background="@color/colorPrimary"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:paddingTop="32dp"
            android:paddingBottom="32dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="cursive"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textSize="64sp"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                tools:layout_editor_absoluteX="90dp"
                tools:layout_editor_absoluteY="62dp" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/tvInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password_info"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:textColorHint="@color/colorWhite">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorWhite"
                    android:backgroundTint="@color/colorWhite"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:onClick="onClickResetPassword"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/colorWhite"
                android:text="@string/reset_password" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClickCancel"
                android:backgroundTint="@color/colorPrimaryDark"
                android:textColor="@color/colorWhite"
                android:text="@string/cancel" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
